# ThreadSieve

./: .gitignore  LICENSE  README.md  pyproject.toml  threadsieve.example.yaml
examples/: thread.md
src/threadsieve/: __init__.py  archive.py  cli.py  config.py  eval.py  extractor.py  ids.py  importers.py  index.py  models.py  pipeline.py  prompts.py  providers.py  review.py  semantic.py  watch.py  writer.py
tests/: test_eval.py  test_importers.py  test_pipeline.py  test_providers.py  test_regression_fixtures.py  test_review.py  test_semantic.py  test_watch.py
tests/fixtures/regression/: README.md  sample-artifact-refinement.md  sample-assistant-adoption-boundary.md  sample-directive-framework.md  sample-example-continuation.md  sample-long-mixed-conversation.md  sample-low-confidence-review.md  sample-messy-voice-chat.md
